--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 networkx==2.2
 numpy==1.19.4
 scikit_learn==1.0.1
-scipy==0.19.1
-torch==1.9.0+cu111
+scipy>=1.1.0
+# scipy==0.19.1
+# torch==1.9.0+cu111
 tqdm==4.54.1
 pandas
